corrected some typos

--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -81,7 +81,7 @@ One feature of the environment should be model transparency and defensibility  t
 
 \section{Priorities}
 \par
-After the first step of information gathering the group decided to organize these features by prioritisation and practicability to proof which goals are achievable in the given time.  
+After the first step of information gathering the group decided to organize these features by priorities and practicability to proof which goals are achievable in the given time.  
 The following order was defined:
 \subsection*{Priority 1:}
 \begin{itemize}
