--- a/06_appendix.tex
+++ b/06_appendix.tex
@@ -55,7 +55,7 @@ System Dynamics (SD) is a common dynamic modelling paradigm within the ecologica
 
 \section{Grammar of the first DSL draft} \label{sec:first_dsl_draft}
 \par
-The first DSL draft had the goal to be able to represent the Similie Bank Tutorial \autocite{dsl:similie_tutorial_bank} textually. Its grammar looked like the following:
+The first DSL draft had the goal to be able to represent the Simile Bank Tutorial \autocite{dsl:similie_tutorial_bank} textually. Its grammar looked like the following:
 \begin{lstlisting}
 Model:
 Model_Description;
