--- a/02a_similie.tex
+++ b/02a_similie.tex
@@ -1,6 +1,6 @@
-\subsection{Similie}\label{sec:similie}
+\subsection{Simile}\label{sec:similie}
 \par
-Simile is a visual modelling environment, developed originally for the dynamic modelling of ecological and environmental systems, which supports a wide range of ways of representing space, it combines a System Dynamics and an object-based approach. System Dynamics is based on a conceptualisation of dynamic systems in terms of stocks and flows, variables and influences. \autocite{dsl:simile-simulistics}
+Simile is a visual modelling environment, developed originally for the dynamic modelling of ecological and environmental systems, which supports a wide range of ways of representing space, it combines a System Dynamics and an object-based approach. System Dynamics is based on a conceptualization of dynamic systems in terms of stocks and flows, variables and influences. \autocite{dsl:simile-simulistics}
 \par
 Like many other modelling frameworks or software tools, simile supports component-based modelling, which helps to divide a complex system to small modulars, as well as System Dynamics modelling, which is a methodology, mainly used to analyze complex mathematical models and problems. Simile is already a successful modelling software, and it has already been adopted in various scientific researches of agricultural or geographical fields in many different countries. With Simile, model developers are also able to integrate knowledges from various studies, guide the research processes and make prediction. Besides that, they can also share the models they have created over the internet, since the models are save as a text file with a structured format. \autocite{dsl:simile-muetzelfeldt} It means that the models created by Simile may be reusable by other modelling framework for further development.
 \subsubsection{Technical implementation}
