--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -10,7 +10,7 @@ The following section describes the project goals which aim to solve these probl
 
 \section{Project goals}
 \par
-The main goal of the project is a feasibility study for a more universal approach to describe environmental models. A domain specific language was proposed as a solution to this need. Although, a plain DSL will not be enough to solve all problems involved in describing an environmental model in such ways that it can be fully described and exchanged without additional information. The following features were defined by Athanasiadis [cite] as necessary for a language or system that allows to fully describe and exchange these environmental models.
+The main goal of the project is a feasibility study for a more universal approach to describe environmental models. A domain specific language was proposed as a solution to this need. Although, a plain DSL will not be enough to solve all problems involved in describing an environmental model in such ways that it can be fully described and exchanged without additional information. The following features were defined in \autocite{dsl:ioannis} by Athanasiadis as necessary for a language or system that allows to fully describe and exchange these environmental models.
 \begin{itemize}
 	\item Domain-specific data structures
 	\item Rich model interfaces    
@@ -81,7 +81,7 @@ One feature of the environment should be model transparency and defensibility  t
 
 \section{Priorities}
 \par
-After the first step of information gathering the group decided to organize these features by priorities and practicability to proof which goals are achievable in the given time.  
+After the first step of information gathering the group decided to organize these features by prioritisation and practicability to proof which goals are achievable in the given time.  
 The following order was defined:
 \subsection*{Priority 1:}
 \begin{itemize}
