information has no plural

--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -80,7 +80,7 @@ To put it in a nutshell, we think that this step is more a question of how to in
 Once the model is written within the IDE it must be possible to run the model as simple as possible and get all necessaries simulation results the user requires. To run the model it is necessary to attach some datasources, because the data is not part of the model \autocite{dsl:muetzelfeldt}. This task does not rely to the concrete modelprocess. It must be possible to attach and detach datasources in a simple way.(see also \ref{sec:vision_for_a_dsl})
 
 
-The model itselfs would define dataslots on which data sources can be attached. In chapter Second DSL Draft the describe statement is used to describe a mapping beetwen one datatupel to another, like an mathematical funktion. Further these statemant can be used as dataslot. In this way the belonging value is not mappend with an formula. In chapter \ref{sec:second_dsl_draft} the describe statement is used to define a mapping between a input datatupel and output datatupel. These mapping is done with a mathematical formula. Further the describe statement can be used as a dataslot. Used in this way the describe statements provide the modeller the possibility to connect to another model or database which will handle the mapping between input and output data. Further the model metadata describes the structure of the input data which is expected. Based on these informations it is possible that the IDE generates an adapter from the available data sources to the model \autocite[81]{Villa2009577}. This process would be entirely transparent for the user. The user will just use a wizard dialog to plug all available data sources to the model using the drag and drop metaphor. All data sources which can not converted to a format the model expects, would automatically marked as inappropriate. If one source, which the user wants to use is marked as inappropriate, he has to reconsider the model definition.
+The model itselfs would define dataslots on which data sources can be attached. In chapter Second DSL Draft the describe statement is used to describe a mapping beetwen one datatupel to another, like an mathematical funktion. Further these statemant can be used as dataslot. In this way the belonging value is not mappend with an formula. In chapter \ref{sec:second_dsl_draft} the describe statement is used to define a mapping between a input datatupel and output datatupel. These mapping is done with a mathematical formula. Further the describe statement can be used as a dataslot. Used in this way the describe statements provide the modeller the possibility to connect to another model or database which will handle the mapping between input and output data. Further the model metadata describes the structure of the input data which is expected. Based on this information it is possible that the IDE generates an adapter from the available data sources to the model \autocite[81]{Villa2009577}. This process would be entirely transparent for the user. The user will just use a wizard dialog to plug all available data sources to the model using the drag and drop metaphor. All data sources which can not converted to a format the model expects, would automatically marked as inappropriate. If one source, which the user wants to use is marked as inappropriate, he has to reconsider the model definition.
 
 
 Another use case which requires a simple possible way to attach datasources is the calibration of the model. That means that data is used on which the results are already known. For example to verify a weather forecast model some old weatherdata would be plugged into the model and the model would be eventually run. The results of the simulations would be compared to the real weather events which happens in the past. The difference between the simulation results and the reality is the precision of the model. But this precision only relies on the specific simulation, it is possible that a simulation with other data belongs to an other precision. To approximate an absolute model precision it is necessary to run such a simulation multiple times with various data. This can be a painful task so its necessary to provide a mechanism to facilitate this. The goal of the model calibration is to determine how to justify the parameter to improve the precision \autocite{toolchain:ems-model_calibration}. If there is enough data available it is imaginable to plugin the datasources and find the best parameter fitting automatically. A tool that already solve this problem is GMS \autocite{toolchain:gms_overview}. How these process looks like in GMS is described in \autocite{toolchain:ems_pram_estimation}.
